# olx-web-scraper

./: .env  .example.env  .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt  scraper.py  test.txt
.\cookies\\test/: Local State  chrome_shutdown_ms.txt
.\cookies\\test/Default/: Cookies  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  QuotaManager  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Visited Links  Web Data
.\cookies\\test/Default/Cache/Cache_Data/: 033ec60dab82e625_0  04fdb8a3acf65471_0  0615d20384d403a6_0  06a1cbdd041febbd_0  0820f57c66229854_0  0985d582a4cfaf95_0  0a0d931713cf3bc5_0  0ad8e3d17842481f_0  0e4683a0f908895b_0  107c2ddd290dc88b_0  110720cd4056ae8a_0  13fb91ee7dd73bfd_0  15145040f7f12f31_0  164bda93e753ebe3_0  17d87e557432c19b_0  1b3aad7f1c4268ed_0  1ec648828d7a63b7_0  1ee5f263cb9126d3_0  1ef18bffd97ad0dd_0  253a8a7a2b34733a_0  2969e61b7656d71b_0  2cad97eefb5acf02_0  3062d92d3ef76677_0  361129442aa2410d_0  3a6f220c160e21fe_0  (+85 more)
.\cookies\\test/Default/Extension Scripts/: LOG
.\cookies\\test/Default/Extension State/: LOG
.\cookies\\test/Default/GPUCache/: data_1  index
.\cookies\\test/Default/Session Storage/: LOG
.\cookies\\test/Default/Sessions/: Session_13296296396062723
.\cookies\\test/Default/Site Characteristics Database/: LOG
.\cookies\\test/Default/shared_proto_db/: LOG
lib/: db.py  loader.py  reader.py  uploader.py
olx_web_scraper/: __init__.py  __main__.py
olx_web_scraper/utils/: db.py  loader.py  parser.py  uploader.py  writer.py
(+134 files in other folders)
